# difference-generator

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml
gendiff/: gendiff.py  make_data.py
gendiff/format/: json.py  json_form.py  plain.py  stylish.py
gendiff/scripts/: gendiff_script.py
tests/: test_gendiff.py  test_make_data.py
tests/fixtures/: check_json.json  check_json.txt
